src/App.scss
/* ... */
.whyus {
  position: relative;
  padding: 170px 0 0;
  background: $white;
  border-radius: 80px;
  padding-left: 40vw;
  overflow: hidden;
  z-index: 10;
  @media screen and (max-width: 1030px) {
    padding: 65px 20px 90px;
    border-radius: 30px;
  }
  &__heading {
    position: absolute;
    max-width: 500px;
    width: 100%;
    top: 50%;
    left: 30px;
    transform: translateY(-50%);
    .split-text {
      color: $black;
    }
    h4 {
      display: none;
      @media screen and (max-width: 575px) {
        display: block;
        font-weight: 500;
        font-size: 24px;
        line-height: 29px;
        margin-bottom: 25px;
        color: white;
        .char {
          display: inline-block;
          transform: translateY(100%);
          opacity: 0;
        }
      }
    }
    h2 {
      @media screen and (max-width: 575px) {
        font-weight: 500;
        font-size: 42px;
        line-height: 40px;
        .char {
          display: inline-block;
          transform: translateY(100%);
          opacity: 0;
        }
      }
    }
    @media screen and (max-width: 1030px) {
      position: relative;
      top: unset;
      left: unset;
      transform: translate(0);
      margin-bottom: 60px;
      top: 8%;
    }
  }
  &__row {
    position: relative;
    display: flex;
    flex-wrap: nowrap;
    width: max-content;
    @media screen and (max-width: 1030px) {
      flex-wrap: wrap;
      width: 100%;
    }
  }
  &__col {
    position: relative;
    width: 1010px;
    height: 100vh;
    padding: 150px 100px 60px;
    z-index: 2;
    .border {
      position: absolute;
      width: 100%;
      height: 100%;
      left: 0;
      top: 0;
      svg {
        width: 100%;
        height: 100%;
        &.desktop {
          @media screen and (max-width: 575px) {
            display: none;
          }
        }
        &.mobile {
          display: none;
          @media screen and (max-width: 575px) {
            display: block;
          }
        }
      }
    }
    @media screen and (max-width: 1030px) {
      width: 100%;
      height: auto;
      padding: 40px 20px;
      &:not(:last-child) {
        margin-bottom: 30px;
      }
    }
    &:not(:last-child) {
      margin-right: 40px;
      @media screen and (max-width: 1030px) {
        margin-right: 0;
      }
    }
    &--icon {
      position: relative;
      margin-bottom: 10px;
      @media screen and (max-width: 1030px) {
        transform: none !important;
      }
      @media screen and (max-width: 575px) {
        display: flex;
        width: 100%;
        justify-content: flex-end;
        margin-bottom: 25px;
      }
      img {
        @media screen and (max-width: 575px) {
          width: 100px;
          transform: scale(0.7);
          opacity: 0;
        }
      }
    }
    &--wrapper {
      position: relative;
      display: flex;
      justify-content: space-between;
      height: calc(100% - 200px);
      @media screen and (max-width: 1030px) {
        height: auto;
        display: block;
      }
    }
    * {
      position: relative;
      z-index: 1;
    }
    &--left {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      @media screen and (max-width: 1030px) {
        justify-content: flex-start;
      }
      &--heading {
        @media screen and (max-width: 1030px) {
          order: 2;
        }
      }
      h3 {
        font-weight: 500;
        font-size: 32px;
        line-height: 41px;
        color: $black;
        margin-bottom: 20vh;
        white-space: nowrap;

        @media screen and (max-width: 1030px) {
          margin-bottom: 20px;
          transform: translateY(30%);
          opacity: 0;
        }
        @media screen and (max-width: 768px) {
          white-space: normal;
        }
        @media screen and (max-width: 575px) {
          font-weight: 500;
          font-size: 22px;
          line-height: 41px;
        }
      }
      h2 {
        font-weight: 500;
        font-size: 72px;
        line-height: 75px;
        color: #757575;

        @media screen and (max-width: 1030px) {
          margin-bottom: 20px;
          transform: translateY(30%);
          opacity: 0;
        }
        @media screen and (max-width: 575px) {
          font-weight: 500;
          font-size: 22px;
          line-height: 75px;
          color: #757575;
          margin-bottom: -10px;
        }
      }
    }
    &--text {
      max-width: 330px;
      width: 100%;
      display: flex;
      flex-direction: column;
      justify-content: flex-end;
      @media screen and (max-width: 1030px) {
        max-width: 100%;
      }
      p {
        font-weight: 200;
        font-size: 1vw;
        line-height: 1.55vw;
        color: $black;

        &:not(:last-child) {
          margin-bottom: 20px;
        }
        @media screen and (max-width: 1030px) {
          font-size: 15px;
          line-height: 22px;
          transform: translateY(30%);
          opacity: 0;
        }
      }
    }
    &::before {
      position: absolute;
      content: "";
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background: rgba(231, 231, 231, 0.59);
      backdrop-filter: blur(9.5px);
      border-radius: 110px;
      @media screen and (max-width: 1030px) {
        border-radius: 14px;
      }
    }
    @media screen and (max-width: 575px) {
      transform: translateY(20%);
      opacity: 0;
    }
  }
}
/* ... */

